Name: pantry
Version: 0.1.0.0
Cabal-version: >=1.8
Build-Type: Simple
License: MIT
Copyright: 2011 Omari Norman.
author: Omari Norman
maintainer: omari@smileystation.com
stability: Experimental
homepage: http://www.smileystation.com/pantry
bug-reports: omari@smileystation.com
synopsis: Nutrient analysis
description: Nutrient analysis

Executable pantryd
    Build-Depends: pantry,
                   base ==4.*
    Main-Is: pantryd.hs
    Hs-Source-Dirs: pantryd-binary

Library
    Build-depends:
        base ==4.*,
        cereal ==0.3.*,
        Decimal-Omari ==0.3.*,
        text ==0.11.*,
        mtl ==2.0.*,
        containers ==0.4.*,
        regex-base ==0.93.*,
        bytestring ==0.9.*,
        regex-pcre ==0.94.*,
        regex-tdfa ==1.1.*,
        network ==2.3.*,
        dlist ==0.5.*,
        parsec ==3.1.*,
        split ==0.1.*,
        filepath ==1.2.*,
        directory ==1.1.*,
        optparse == 0.1.*,
        unix ==2.5.*

    Exposed-modules:
        Pantry.Bag,
        Pantry.Conveyor,
        Pantry.Error,
        Pantry.Exact,
        Pantry.Food,
        Pantry.Matchers,
        Pantry.Paths,
        Pantry.Parser,
        Pantry.Radio,
        Pantry.Radio.Messages,
        Pantry.Reports,
        Pantry.Rounded,
        Pantry.Session,
        Pantry.Sorter,
        Pantry.Tray,
        Pantry.Types,
        Pantry.WrappedFoldable,
        Pantry.Reports.Blank,
        Pantry.Reports.Columns,
        Pantry.Reports.Copyright,
        Pantry.Reports.CountTags,
        Pantry.Reports.ElemBy,
        Pantry.Reports.Help,
        Pantry.Reports.Ingredients,
        Pantry.Reports.Name,
        Pantry.Reports.Nuts,
        Pantry.Reports.Paste,
        Pantry.Reports.Properties,
        Pantry.Reports.Status,
        Pantry.Reports.Tags,
        Pantry.Reports.Total,
        Pantry.Reports.Types,
        Pantry.Reports.Units,
        Pantry.Reports.Version

    ghc-options: -Wall
