Name: pantry-bin
Version: 0.1.0.0
Cabal-version: >=1.8
Build-Type: Simple
License: MIT
Copyright: 2011 Omari Norman.
author: Omari Norman
maintainer: omari@smileystation.com
stability: Experimental
homepage: http://www.smileystation.com/pantry
bug-reports: omari@smileystation.com
synopsis: Nutrient analysis
description: Nutrient analysis

Executable pantryd
    Build-Depends: pantry-lib ==0.1.0.0,
                   base ==4.*
    Main-Is: pantryd.hs

Executable pantry
    Build-Depends: pantry-lib ==0.1.0.0,
                   base ==4.*
    Main-Is: pantry.hs
